[project]
    name = "book"
    version = "0.0.1"
    authors = [
        { name="Patrick Dunham", email="patrick.dunham.113@gmail.com" },
    ]
    description = "transaction recording & budgeting"
    readme = "README.md"
    license = { file = "LICENSE" }
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
    ]
    requires-python = ">=3.10"
    dependencies = [
        "mysql-connector-python",
    ]

[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

[project.urls]
    Homepage = "https://github.com/PDunham113/book"
    Issues = "https://github.com/PDunham113/book/issues"
